fixex media hub play button positioned off center

--- a/public/styles/sixf.css
+++ b/public/styles/sixf.css
@@ -498,8 +498,7 @@ h1.title {
     transition: 450ms opacity;
 }
 
-.tile__details:after,
-.tile__details:before {
+.tile__details:after {
     content: '';
     position: absolute;
     top: 50%;
@@ -508,29 +507,29 @@ h1.title {
 }
 
 .tile__details:after {
-    margin-top: -25px;
-    margin-left: -25px;
     width: 50px;
     height: 50px;
     border: 3px solid #ecf0f1;
-    line-height: 50px;
-    text-align: center;
     border-radius: 100%;
     background: rgba(0,0,0,0.5);
     z-index: 1;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    margin: auto auto;
 }
 
-.tile__details:before {
-    content: '▶';
-    left: 0;
-    width: 100%;
-    font-size: 30px;
-    display:flex;
-    justify-content:center;
-    margin-top: -.5em;
-    margin-left: .2em;
-    text-align: center;
-    z-index: 2;
+.play-button {
+    height: 16px;
+    display: block;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 5px;
+    right: 0;
+    margin: auto auto;
 }
 
 .tile:hover .tile__details {
